# controllers/waterConsumptionController.js
@@ -83,7 +83,7 @@ export const getWaterToday = catchErrors(async (req, res) => {
   const totalConsumed = water.reduce((acc, entry) => acc + entry.value, 0);
 
   res.json({
-    consumptionPersentage: Math.round((totalConsumed / dailyWaterGoal) * 100),
+    consumptionPercentage: Math.round((totalConsumed / dailyWaterGoal) * 100),
     consumption: water.map(transformWaterConsumption),
   });
 });
